ChangeLog
=========

Aug 18, 2015 : v0.20 released!
  - attempted to use SWT (GLCanvas) but their keyboard support is not designed for gaming
    - it doesn't generate key release events if multiple keys are pressed
      - a known bug since v1.0 and still present in v4.5
  - started using LWJGL/3.0 (which uses GLFW)
    - GLFW has a mouse locking feature which is better than using java.awt.Robot
    - GLFW can not set the window icon (feature is implemented in git, not released yet)
    - LWJGL uses libffi which in my experience is PAINfully slow
  - finally switched to GLFW (now part of JavaForce)
    - GLFW doesn't support icons yet but I added some JNI to overcome that (Windows only)
  - added block hardness
  - added clouds (see http://gamedev.stackexchange.com/questions/105753/how-does-minecraft-render-its-clouds)
  - lots of improvements and bug fixes

Aug 1, 2015 : v0.19 released!
  - fix major opengl resource leak (crashing on some systems)
  - climb ladders & vines
  - leaves decay (like a branch would, not randomly)
  - move slowly in webs

Jul 31, 2015 : v0.18 released!
  - players armor is now rendered
  - new /import /export commands added
    - load and save blueprints (kinda like schematics)
    - this will allow for rapid development of villages, etc.
  - a cabin is now generated randomly (the cabin is a blueprint)
  - many bug fixes

Jul 1, 2015 : v0.17 released!
  - fixed sync problem when players are in vehicles (minecart, boat)
    - the server controls everything now while in vehicle
  - horse is mostly complete now
    - a message "Horse Tamed" appears when a horse is tamed (todo : heart particles)
    - mule/donkey can use chest
    - horses can use armor
    - saddle can be crafted (4 leather, 2 iron bars)
    - TODO : lead

Jun 21, 2015 : v0.16 released!
  - fixed cracking boat/minecart (cracks must be on their own texture unit)
  - added Mario World dimension
    - new turtle entity
    - new block types